<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/logout1" />

    <TextView
        android:id="@+id/bienvenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bien"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"/>

    <TextView
        android:id="@+id/textViewExplanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:text="@string/explications"
        android:textAlignment="center" />

    <LinearLayout
        android:id="@+id/actionButtonsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewExplanation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPoste"
            android:layout_width="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"
            android:text="Poster" />

        <Button
            android:id="@+id/btnTrouve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Trouve" />

    </LinearLayout>

</RelativeLayout>
